Common UndoEngine + Selection cropping closes #189
- Now, the undo stack of pages and of elements are merged, but different types exist to not execute pages NO_COUNT actions with elements regular actions. Implementing NO_COUNT_BEFORE and NO_COUNT_AFTER for better support of complex composed actions.
- Setup margin/cropping new shortcuts from the PageEditPane (red buttons), and the context menu of PageRenderer in pages edit mode.
- Allowing cropping page with a selection.