@@ -12,11 +12,11 @@ import javafx.scene.input.KeyCombination;
 
 import java.util.ArrayList;
 
-public class UndoEngine{
+public class UndoEngine {
     
     public static final KeyCombination KEY_COMB_UNDO = new KeyCodeCombination(KeyCode.Z, KeyCombination.SHORTCUT_DOWN);
     public static final KeyCombination KEY_COMB_REDO = new KeyCodeCombination(KeyCode.Z, KeyCombination.SHIFT_DOWN, KeyCombination.SHORTCUT_DOWN);
-    private static final int MAX_STACK_LENGTH = 200;
+    private static final int MAX_STACK_LENGTH = 300;
     
     private ArrayList<UndoAction> undoList = new ArrayList<>();
     private ArrayList<UndoAction> redoList = new ArrayList<>();
@@ -27,41 +27,43 @@ public class UndoEngine{
     
     private static final boolean VERBOSE = true;
     
-    // When false, only NO_COUNT actions before the classic undo action will be processed.
-    // If true, the NO_COUNT actions that are after the classic undo action, will be processed at the same time
-    // This boolean is false for Pages UndoEngine
-    private final boolean doProcessNoCountRightAndLeft;
-    // TODO: Keep a single instance for both pages and elements, and specify pages with uType
-    //  PAGES, PAGES_NO_COUNT and PAGES_ELEMENTS that require synchronisation between pages and elements
-    //  - In page mode, undoing PAGES, PAGES_NO_COUNT, PAGES_ELEMENTS, PAGES_ELEMENTS_NO_COUNT
-    //  - In element mode, undoing ELEMENTS, ELEMENTS_NO_COUNT, PAGES_ELEMENTS, PAGES_ELEMENTS_NO_COUNT
-    public UndoEngine(boolean doProcessNoCountRightAndLeft){
-        this.doProcessNoCountRightAndLeft = doProcessNoCountRightAndLeft;
-    }
     
     public void registerNewAction(UndoAction action){
         if(action.getUndoType() == UType.NO_UNDO || isUndoingThings || isLocked) return;
-    
+        
         if(VERBOSE) Log.t("Adding action to undo stack: " + action + " [" + action.getUndoType() + "]");
-        undoList.add(0, action);
+        undoList.addFirst(action);
         checkUndoStackLength();
-    
-        // Since actions are not dependant each other, clearing redo stack is not necessarily necessary.
-        // But, it can be easier to the user, even if he will not be able to redo after editing.
+        
         redoList.clear();
     }
+    private UType getFirstUndoType(){
+        if(undoList.isEmpty()) return UType.NO_UNDO;
+        return undoList.getFirst().getUndoType();
+    }
+    private UType getFirstRedoType(){
+        if(redoList.isEmpty()) return UType.NO_UNDO;
+        return redoList.getFirst().getUndoType();
+    }
+    
     
     public void undo(){
         if(VERBOSE) Log.t("Execute UNDO (stack has " + undoList.size() + " actions)");
+        if(undoList.isEmpty()) return;
+        
         isUndoingThings = true;
         
-        while(!undoLastAction());
+        UType uType = undoList.getFirst().getUndoType();
+        UType beforeType = uType.toNoCountBefore();
+        UType regularType = uType.toRegular();
+        UType afterType = uType.toNoCountAfter();
         
-        // After having undoing last action, undo all next NO_COUNT actions
-        // Do not process next NO_COUNT actions if doProcessNoCountRightAndLeft is true
-        while(doProcessNoCountRightAndLeft && !undoList.isEmpty() && undoList.get(0).getUndoType() == UType.NO_COUNT){
-            undoLastAction();
-        }
+        // Undo all the before types
+        while(getFirstUndoType() == beforeType) undoLastAction();
+        // Undo all the regular types while completed is false
+        while(getFirstUndoType() == regularType && !undoLastAction()) ;
+        // Undo all the after types
+        while(getFirstUndoType() == afterType) undoLastAction();
         
         checkRedoStackLength();
         isUndoingThings = false;
@@ -69,54 +71,46 @@ public class UndoEngine{
     
     public void redo(){
         if(VERBOSE) Log.t("Execute REDO (stack has " + redoList.size() + " actions)");
+        if(redoList.isEmpty()) return;
         isUndoingThings = true;
         
-        // doProcessNoCountRightAndLeft has no interest in redo because the first action in the list will always be a classic action
-        while(!redoLastAction());
-    
-        // After having undoing last action, undo all next NO_COUNT actions
-        while(!redoList.isEmpty() && redoList.get(0).getUndoType() == UType.NO_COUNT){
-            redoLastAction();
-        }
+        UType uType = redoList.getFirst().getUndoType();
+        UType beforeType = uType.toNoCountBefore();
+        UType regularType = uType.toRegular();
+        UType afterType = uType.toNoCountAfter();
+        
+        // Redo all the after types
+        while(getFirstRedoType() == afterType) redoLastAction();
+        // Redo all the regular types while completed is false
+        while(getFirstRedoType() == regularType && !redoLastAction()) ;
+        // Redo all the before types
+        while(getFirstRedoType() == beforeType) redoLastAction();
         
         checkUndoStackLength();
         isUndoingThings = false;
     }
     private boolean undoLastAction(){
-        if(undoList.isEmpty()) return true;
-        
         UndoAction action = undoList.getFirst();
+        
         if(VERBOSE) Log.t("Undoing: " + action + " [" + action.getUndoType() + "]");
         undoList.removeFirst();
         boolean completed = action.undoAndInvert();
         redoList.addFirst(action);
-    
-        return completed && action.getUndoType() == UType.UNDO;
+        
+        return completed;
     }
     private boolean redoLastAction(){
-        if(redoList.isEmpty()) return true;
-        
         UndoAction action = redoList.getFirst();
+        
         if(VERBOSE) Log.t("Redoing: " + action + " [" + action.getUndoType() + "]");
         redoList.removeFirst();
         boolean completed = action.undoAndInvert();
         undoList.addFirst(action);
-    
-        return completed && action.getUndoType() == UType.UNDO;
+        
+        return completed;
     }
     
     
-    
-    private boolean computeAction(ArrayList<UndoAction> redoList, ArrayList<UndoAction> undoList){
-        if(redoList.isEmpty()) return true;
-        
-        UndoAction action = redoList.getFirst();
-        boolean completed = action.undoAndInvert();
-        undoList.addFirst(action);
-        redoList.removeFirst();
-        
-        return completed && action.getUndoType() == UType.UNDO;
-    }
     public UndoAction getUndoNextAction(){
         if(!undoList.isEmpty()){
             return undoList.getFirst();
@@ -135,6 +129,7 @@ public class UndoEngine{
         }
         return null;
     }
+    
     
     private void checkUndoStackLength(){
         if(undoList.size() > MAX_STACK_LENGTH){
